# lib/models/ResponseSetDeviceSlogan.js
@@ -1,0 +1,11 @@
+function ResponseSetDeviceSlogan() {
+}
+
+ResponseSetDeviceSlogan.prototype.data = function() {
+    return {
+        MiataruResponse: 'ACK',
+        MiataruVerboseResponse: 'Device slogan set successfully'
+    };
+};
+
+module.exports = ResponseSetDeviceSlogan;
