# lib/routes/location/index.js
@@ -17,6 +17,8 @@ module.exports.install = function(app) {
     app.post('/v1/DeleteLocation', v1.inputParser, v1.deleteLocation);
     app.post('/v1/setDeviceKey', v1.inputParser, v1.setDeviceKey);
     app.post('/v1/setAllowedDeviceList', v1.inputParser, v1.setAllowedDeviceList);
+    app.post('/v1/setDeviceSlogan', v1.inputParser, v1.setDeviceSlogan);
+    app.post('/v1/getDeviceSlogan', v1.inputParser, v1.getDeviceSlogan);
 
     ///////////////////////////////////////////
     ///// API current /////////////////////////
@@ -32,6 +34,8 @@ module.exports.install = function(app) {
     app.post('/DeleteLocation', v1.inputParser, v1.deleteLocation);
     app.post('/setDeviceKey', v1.inputParser, v1.setDeviceKey);
     app.post('/setAllowedDeviceList', v1.inputParser, v1.setAllowedDeviceList);
+    app.post('/setDeviceSlogan', v1.inputParser, v1.setDeviceSlogan);
+    app.post('/getDeviceSlogan', v1.inputParser, v1.getDeviceSlogan);
 
     ///////////////////////////////////////////
     ///// non-Post /////////////////////////
@@ -51,6 +55,9 @@ module.exports.install = function(app) {
     app.all('/v1/DeleteLocation', handleUnsupportedMethod);
     app.all('/v1/setDeviceKey', handleUnsupportedMethod);
     app.all('/v1/setAllowedDeviceList', handleUnsupportedMethod);
+    app.all('/v1/GetVisitorHistory', handleUnsupportedMethod);
+    app.all('/v1/setDeviceSlogan', handleUnsupportedMethod);
+    app.all('/v1/getDeviceSlogan', handleUnsupportedMethod);
     app.all('/UpdateLocation', handleUnsupportedMethod);
     app.all('/GetLocation', handleUnsupportedMethod);
     app.all('/GetLocationGeoJSON', handleUnsupportedMethod);
@@ -59,4 +66,6 @@ module.exports.install = function(app) {
     app.all('/GetVisitorHistory', handleUnsupportedMethod);
     app.all('/setDeviceKey', handleUnsupportedMethod);
     app.all('/setAllowedDeviceList', handleUnsupportedMethod);
+    app.all('/setDeviceSlogan', handleUnsupportedMethod);
+    app.all('/getDeviceSlogan', handleUnsupportedMethod);
 };
