# lib/routes/location/v1/index.js
@@ -11,5 +11,7 @@ module.exports = {
     getVisitorHistory: location.getVisitorHistory,
     deleteLocation: location.deleteLocation,
     setDeviceKey: location.setDeviceKey,
-    setAllowedDeviceList: location.setAllowedDeviceList
+    setAllowedDeviceList: location.setAllowedDeviceList,
+    setDeviceSlogan: location.setDeviceSlogan,
+    getDeviceSlogan: location.getDeviceSlogan
 };
