# lib/routes/location/v1/inputParser.js
@@ -6,6 +6,8 @@ var RequestLocationHistory = require('../../../models/RequestLocationHistory');
 var RequestVisitorHistory = require('../../../models/RequestVisitorHistory');
 var RequestSetDeviceKey = require('../../../models/RequestSetDeviceKey');
 var RequestSetAllowedDeviceList = require('../../../models/RequestSetAllowedDeviceList');
+var RequestSetDeviceSlogan = require('../../../models/RequestSetDeviceSlogan');
+var RequestGetDeviceSlogan = require('../../../models/RequestGetDeviceSlogan');
 
 module.exports = function(req, res, next) {
     req.MIATARU = req.MIATARU || {};
@@ -45,6 +47,14 @@ module.exports = function(req, res, next) {
             case '/setAllowedDeviceList':
             case '/v1/setAllowedDeviceList':
                 parseSetAllowedDeviceList(req);
+                break;
+            case '/setDeviceSlogan':
+            case '/v1/setDeviceSlogan':
+                parseSetDeviceSlogan(req);
+                break;
+            case '/getDeviceSlogan':
+            case '/v1/getDeviceSlogan':
+                parseGetDeviceSlogan(req);
                 break;
         }
     }
@@ -115,4 +125,12 @@ function parseSetDeviceKey(req) {
 
 function parseSetAllowedDeviceList(req) {
     req.MIATARU.request = new RequestSetAllowedDeviceList(req.body['MiataruSetAllowedDeviceList'] || {});
+}
+
+function parseSetDeviceSlogan(req) {
+    req.MIATARU.request = new RequestSetDeviceSlogan(req.body['MiataruSetDeviceSlogan'] || {});
+}
+
+function parseGetDeviceSlogan(req) {
+    req.MIATARU.request = new RequestGetDeviceSlogan(req.body['MiataruGetDeviceSlogan'] || {});
 }
