# lib/routes/location/v1/location.js
@@ -28,6 +28,7 @@ var allowedDevicesUtils = require('../../../utils/allowedDevices');
 var KEY_HISTORY = 'hist';
 var KEY_LAST = 'last';
 var KEY_VISIT = 'visit';
+var KEY_SLOGAN = 'slogan';
 
 /**
  * Record visitor history entry
@@ -208,6 +209,40 @@ function validateRequestingDeviceKeyForGetLocation(requestConfig, callback) {
 
             if (!isValid) {
                 return callback(new errors.ForbiddenError('RequestMiataruDeviceKey does not match (strictDeviceKeyCheck is enabled)'));
+            }
+
+            callback();
+        });
+    });
+}
+
+function validateDeviceKeyWithRequirement(deviceId, providedDeviceKey, requireConfiguredKey, callback) {
+    deviceKeyUtils.getDeviceKey(deviceId, function(error, storedKey) {
+        if (error) {
+            return callback(error);
+        }
+
+        var hasConfiguredKey = storedKey !== null && storedKey !== undefined;
+
+        if (requireConfiguredKey && !hasConfiguredKey) {
+            return callback(new errors.ForbiddenError('DeviceKey must be set for this device'));
+        }
+
+        if (!hasConfiguredKey) {
+            return callback();
+        }
+
+        if (!providedDeviceKey || providedDeviceKey === null || providedDeviceKey === '') {
+            return callback(new errors.ForbiddenError('DeviceKey is required for this device'));
+        }
+
+        deviceKeyUtils.validateDeviceKey(deviceId, providedDeviceKey, function(validationError, isValid) {
+            if (validationError) {
+                return callback(validationError);
+            }
+
+            if (!isValid) {
+                return callback(new errors.ForbiddenError('DeviceKey does not match'));
             }
 
             callback();
@@ -1007,6 +1042,106 @@ function setAllowedDeviceList(req, res, next) {
         });
 }
 
+/**
+ * SetDeviceSlogan
+ * Sets an optional slogan string (max 40 chars) for a device.
+ * Requires that the device has a configured DeviceKey and a valid matching key in the request.
+ * @param req
+ * @param res
+ * @param next
+ */
+function setDeviceSlogan(req, res, next) {
+    var request = req.MIATARU.request;
+    var deviceId = request.deviceId();
+    var deviceKey = request.deviceKey();
+    var slogan = request.slogan();
+    var sloganKey = kb.build(deviceId, KEY_SLOGAN);
+
+    seq()
+        .seq(function() {
+            var done = this;
+            validateDeviceKeyWithRequirement(deviceId, deviceKey, true, done);
+        })
+        .seq(function() {
+            var done = this;
+            db.set(sloganKey, slogan, function(error) {
+                if (error) {
+                    return done(error);
+                }
+
+                done();
+            });
+        })
+        .seq(function() {
+            res.send((new models.ResponseSetDeviceSlogan()).data());
+        })
+        .catch(function(error) {
+            if (error instanceof errors.ForbiddenError) {
+                return next(error);
+            }
+            next(new errors.InternalServerError(error));
+        });
+}
+
+/**
+ * GetDeviceSlogan
+ * Reads an optional slogan string for a target device.
+ * Requesting device must be authenticated with RequestDeviceID + RequestDeviceKey.
+ * Access is independent from allowed devices list and each successful read on an existing slogan
+ * is tracked in the target device's visitor history.
+ * @param req
+ * @param res
+ * @param next
+ */
+function getDeviceSlogan(req, res, next) {
+    var request = req.MIATARU.request;
+    var targetDeviceId = request.deviceId();
+    var requestDeviceId = request.requestDeviceID();
+    var requestDeviceKey = request.requestDeviceKey();
+    var sloganKey = kb.build(targetDeviceId, KEY_SLOGAN);
+
+    seq()
+        .seq(function() {
+            var done = this;
+            validateDeviceKeyWithRequirement(requestDeviceId, requestDeviceKey, true, done);
+        })
+        .seq(function() {
+            var done = this;
+            db.get(sloganKey, function(error, reply) {
+                if (error) {
+                    return done(error);
+                }
+
+                done.vars = done.vars || {};
+                done.vars.slogan = reply;
+                done();
+            });
+        })
+        .seq(function() {
+            var slogan = this.vars.slogan;
+
+            // Track visitor only if target has a slogan entry.
+            if (slogan !== null && slogan !== undefined) {
+                var visitKey = kb.build(targetDeviceId, KEY_VISIT);
+                var visitorObject = request.requestVisitorObject(targetDeviceId);
+                if (visitorObject !== null) {
+                    recordVisitorHistory(visitKey, JSON.stringify(visitorObject));
+                }
+            }
+
+            res.send((new models.ResponseDeviceSlogan(
+                targetDeviceId,
+                slogan !== undefined ? slogan : null
+            )).data());
+        })
+        .catch(function(error) {
+            if (error instanceof errors.ForbiddenError) {
+                return next(error);
+            }
+            next(new errors.InternalServerError(error));
+        });
+}
+
 
 module.exports = {
     updateLocation: updateLocation,
@@ -1017,5 +1152,7 @@ module.exports = {
     getVisitorHistory: getVisitorHistory,
     deleteLocation: deleteLocation,
     setDeviceKey: setDeviceKey,
-    setAllowedDeviceList: setAllowedDeviceList
+    setAllowedDeviceList: setAllowedDeviceList,
+    setDeviceSlogan: setDeviceSlogan,
+    getDeviceSlogan: getDeviceSlogan
 };
